# ROS_WS

date_process/: creat_map.py  global_path_extract.py  global_path_plot.py  robot_pose.py
date_process/global_path/: A_star.csv  Dijikstra.csv  geo.csv
devel/include/amcl/: AMCLConfig.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/nmpc_local_planner/: NmpcLocalPlannerReconfigureConfig.h
devel/lib/amcl/: amcl
devel/lib/base_local_planner/: point_grid
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/fake_localization/: fake_localization
devel/lib/global_planner/: planner
devel/lib/map_server/: map_saver  map_server  rtest
devel/lib/move_base/: move_base
devel/lib/navfn/: navfn_node  navtest
devel/lib/obstacle_detector/: obstacle_extractor_node  obstacle_publisher_node  obstacle_tracker_node  scans_merger_node
devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  map_server.pc  move_base.pc  move_slow_and_clear.pc  nav_core.pc  navfn.pc  nmpc_local_planner.pc  rotate_recovery.pc  voxel_grid.pc
devel/share/amcl/cmake/: amclConfig.cmake
devel/share/base_local_planner/cmake/: base_local_planner-msg-paths.cmake  base_local_plannerConfig.cmake
devel/share/carrot_planner/cmake/: carrot_plannerConfig.cmake
devel/share/clear_costmap_recovery/cmake/: clear_costmap_recoveryConfig.cmake
devel/share/costmap_2d/cmake/: costmap_2d-msg-extras.cmake  costmap_2d-msg-paths.cmake  costmap_2dConfig.cmake
devel/share/dwa_local_planner/cmake/: dwa_local_plannerConfig.cmake
devel/share/fake_localization/cmake/: fake_localizationConfig.cmake
devel/share/geo_local_planner/cmake/: geo_local_plannerConfig.cmake
devel/share/global_planner/cmake/: global_plannerConfig.cmake
devel/share/map_server/cmake/: map_serverConfig.cmake
devel/share/move_base/cmake/: move_baseConfig.cmake
devel/share/move_slow_and_clear/cmake/: move_slow_and_clearConfig.cmake
devel/share/nav_core/cmake/: nav_coreConfig.cmake
devel/share/navfn/cmake/: navfnConfig.cmake
devel/share/nmpc_local_planner/cmake/: nmpc_local_plannerConfig.cmake
devel/share/nmpc_local_planner/docs/: NmpcLocalPlannerReconfigureConfig-usage.dox  NmpcLocalPlannerReconfigureConfig.dox  NmpcLocalPlannerReconfigureConfig.wikidoc
devel/share/obstacle_detector/cmake/: obstacle_detectorConfig.cmake
src/dwa/: local_path.py
src/geo_local_planner/: CMakeLists.txt
src/geo_local_planner/scripts/: geo_path_planner.py  robot_pose_visu.py
src/nmpc_local_planner/: CMakeLists.txt  nmpc_local_planner_plugin.xml
src/nmpc_local_planner/cfg/: NmpcLocalPlannerReconfigure.cfg
src/nmpc_local_planner/config/: nmpc_local_planner_params.yaml
src/nmpc_local_planner/gen_c/: nmpc_cartesian_dyn_whizzy.c
src/nmpc_local_planner/include/nmpc_local_planner/: nmpc_config.h  nmpc_planner.h  nmpc_planner_ros.h  obstacle_update.h  obstacles.h  path.h  ref_path_planner.h
src/nmpc_local_planner/scripts/: nmpc.py  nmpc_whizzy_stable.ipynb  opt_module.py  path_module.py  robot_pose_visu.py
src/nmpc_local_planner/src/: nmpc_planner.cpp  nmpc_planner_ros.cpp  obstacle_update.cpp  ref_path_planner.cpp
src/panther_simulation/config/: costmap_common_params.yaml  local_costmap_params.yaml  planner_sim_params.yaml  planner_sim_params_nmpc.yaml
src/panther_simulation/launch/: nav_TEB.launch  nav_dwa.launch  nav_geo.launch  nav_nmpc.launch  obstacle_detection.launch
src/panther_simulation/maps/: 3_obs.pgm  3_obs.yaml  empty.pgm  empty.yaml
src/panther_simulation/worlds/: 2_obs.world  obs.world
(+18 files in other folders)
